Refactor/#21 refactor code (#22)
* refactor: 의미에 맞게 메서드명 변경 (#21)

* refactor: 가독성 향상을 위한 상수 사용 (#21)

* refactor: move() 연산 시 string 이 아닌, int 연산을 통해 효율성 향상 (#21)

* refactor: 가독성 향상을 위한 상수 사용 (#21)

* refactor: 클래스 외부에서 사용되지 않기 때문에 접근제어자 private으로 변경 (#21)

* refactor: Car 객체가 스스로 움직임 여부를 결정할 수 있도록 변경 (#21)

* refactor: 가독성 향상을 위한 상수 사용 (#21)

* refactor: 가독성 향상을 위한 코드 개선 (#21)

* refactor: 객체를 생성할 수 없도록 private 생성자 작성 (#21)

* refactor: 가독성 향상을 위한 코드 개선 (#21)

* refactor: 사용되지 않는 import 제거 (#21)